Fixed a bug related to user registration.
