# controllers/authController.js
@@ -1,6 +1,6 @@
 const { User } = require("../models/User");
 const register = async  (req, res) => {
-    const { username,phone, email, password } = req.body;
+    const { name,phone, email, password } = req.body;
   
     try {
       const existingUser = await User.findOne({email});
@@ -8,7 +8,7 @@ const register = async  (req, res) => {
         return res.status(400).json({ message: 'این ایمیل قبلا ثبت شده است!' });
       }
 
-      const user = new User({ username, email, password });
+      const user = new User({ name, email,phone, password });
       await user.save();
   
       res.status(201).json({ message: 'ثبت‌نام با موفقیت انجام شد.', user });
@@ -16,6 +16,8 @@ const register = async  (req, res) => {
       res.status(500).json({ message: 'خطای سرور', error: err.message });
     }
   }
+
+ 
 
   module.exports= {
     register
