# swagger.json
@@ -1,10 +1,16 @@
 {
   "swagger": "2.0",
-  "info": {
-    "version": "1.0.0",
-    "title": "REST API",
-    "description": ""
-  },
+ "info": {
+		"title": "Home Appliance Store API",
+		"version": "1.0.0",
+		"description": "API documentation for the Home Appliance Store"
+	},
+  "servers": [
+		{
+			"url": "http://localhost:3000",
+			"description": "Local server"
+		}
+	],
   "host": "localhost:6500",
   "basePath": "/",
   "schemes": [
@@ -21,7 +27,7 @@
             "schema": {
               "type": "object",
               "properties": {
-                "username": {
+                "name": {
                   "example": "string"
                 },
                 "phone": {
